style: add image source in Dockerfile

--- a/demo/predict-taxi-trip-duration-nb/Dockerfile
+++ b/demo/predict-taxi-trip-duration-nb/Dockerfile
@@ -1,5 +1,7 @@
 FROM centos:8
 
+LABEL org.opencontainers.image.source https://github.com/4paradigm/OpenMLDB
+
 RUN yum install -y python38 python38-pip python38-numpy libgomp java-1.8.0-openjdk-headless && \
     yum clean all && \
     pip3 install lightgbm tornado requests pandas openmldb
