--- a/cases/plan/simple_query.yaml
+++ b/cases/plan/simple_query.yaml
@@ -317,3 +317,42 @@ cases:
           |      +-table: t1
           |      +-alias: <nil>
           +-window_list: []
+  - id: in_predicate_normal
+    desc: select in expression with in list
+    sql: select 'a' IN ('a', 'b', 'c') from t1;
+    expect:
+      node_tree_str: |
+        +-node[kQuery]: kQuerySelect
+          +-distinct_opt: false
+          +-where_expr: null
+          +-group_expr_list: null
+          +-having_expr: null
+          +-order_expr_list: null
+          +-limit: null
+          +-select_list[list]:
+          |  +-0:
+          |    +-node[kResTarget]
+          |      +-val:
+          |      |  +-expr[in]
+          |      |    +-is_not: false
+          |      |    +-lhs:
+          |      |    |  +-expr[primary]
+          |      |    |    +-value: a
+          |      |    |    +-type: string
+          |      |    +-in_list:
+          |      |      +-expr[primary]
+          |      |        +-value: a
+          |      |        +-type: string
+          |      |      +-expr[primary]
+          |      |        +-value: b
+          |      |        +-type: string
+          |      |      +-expr[primary]
+          |      |        +-value: c
+          |      |        +-type: string
+          |      +-name: <nil>
+          +-tableref_list[list]:
+          |  +-0:
+          |    +-node[kTableRef]: kTable
+          |      +-table: t1
+          |      +-alias: <nil>
+          +-window_list: []
