--- a/cases/query/simple_query.yaml
+++ b/cases/query/simple_query.yaml
@@ -22,7 +22,6 @@ cases:
     inputs:
       - name: t1
         resource: cases/resource/simple_t1_ts.yaml
-        index: index2:col2
     expect:
       schema: col0:string, col1:int32, col2:int16, col3:float, col4:double, col5:int64, col6:string, std_ts:timestamp
       order: col1
@@ -42,7 +41,6 @@ cases:
     inputs:
       - name: t1
         resource: cases/resource/simple_t1_ts.yaml
-        index: index2:col2
     expect:
       schema: col0:string, id:int32, col2:int16, col3:float, col4:double, col5:int64, col6:string, std_ts:timestamp
       order: id
@@ -100,7 +98,6 @@ cases:
     inputs:
       - name: t1
         resource: cases/resource/simple_t1_ts.yaml
-        index: index2:col2
     expect:
       schema: id:int32, std_ts:timestamp, inc_sec_ts:timestamp, flag:bool
       order: id
@@ -122,7 +119,6 @@ cases:
     inputs:
       - name: t1
         resource: cases/resource/simple_t1_ts.yaml
-        index: index2:col2
     expect:
       schema: id:int32, std_ts:timestamp, inc_sec_ts:timestamp, flag:bool
       order: id
@@ -165,7 +161,7 @@ cases:
       - name: t1
         schema: id:int32, int16:int16, int32:int32, int64:int64, float:float, double:double,
           ts:timestamp, dt:date, string:string
-        index: index:id
+        indexs: ["index:id"]
         data: |
           1, NULL, NULL, NULL, 1.0, 1.0, 1590115420001, 2020-05-20, x
           2, 1, 1, 1, NULL, NULL, 1590115420002, 2020-05-21, y
@@ -293,7 +289,7 @@ cases:
     inputs:
       - name: t1
         schema: col1:int32, std_ts:timestamp, std_date:date
-        index: index2:col1
+        index: index1:col1:std_ts
         data: |
           1, 1590115420001, 2020-05-20
     sql: |
@@ -330,3 +326,140 @@ cases:
       columns: ["col1:bool"]
       rows:
         - [NULL]
+  - id: in_predicate_normal
+    desc: normal in predicate test
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        indexs: ["index1:col1:std_ts"]
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select d[0] d[1] (1, 10) as col1 from t1;
+    dataProvider:
+      - ["1", "2", "NULL"]
+      - ["IN", "NOT IN"]
+    expect:
+      columns: ["col1:bool"]
+    expectProvider:
+      0:
+        0:
+          rows:
+            - [true]
+        1:
+          rows:
+            - [false]
+      1:
+        0:
+          rows:
+            - [false]
+        1:
+          rows:
+            - [true]
+      2:
+        0:
+          rows:
+            - [NULL]
+        1:
+          rows:
+            - [NULL]
+  - id: in_predicate_v_null_true
+    desc: in_list has NULL but one of the comparison is true, return true
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        indexs: ["index1:col1:std_ts"]
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in (1, NULL) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
+  - id: in_predicate_v_null_null
+    desc: in predicate in_list has NULL and none of the comparisons is true, return NULL
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        indexs: ["index1:col1:std_ts"]
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in (2, NULL) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [NULL]
+  - id: in_predicate_null_null_null
+    desc: in use normal equal operator, NULL in (NULL, ..) is NULL
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        indexs: ["index1:col1:std_ts"]
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select NULL in (1, NULL) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [NULL]
+  - id: in_predicate_type_cast_1
+    desc: type conversion, string converted into number
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        indexs: ["index1:col1:std_ts"]
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in ('1', '2') as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
+  - id: in_predicate_type_cast_2
+    desc: type conversion, decimal converted into float/double
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        indexs: ["index1:col1:std_ts"]
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in (1.0, 2.0) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
+  - id: in_predicate_type_cast_3
+    desc: type conversion, string not converted into float/double
+    tags: ["need-discussion"]
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        indexs: ["index1:col1:std_ts"]
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select '1' in (1.0, 2.0) as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
+  - id: in_predicate_type_cast_4
+    desc: in_list should be same type
+    tags: ["need-discussion"]
+    inputs:
+      - name: t1
+        columns: ["col1:int32", "std_ts:timestamp", "std_date:date"]
+        indexs: ["index1:col1:std_ts"]
+        rows:
+          - [1, 1590115420001, 2020-05-20]
+    sql: |
+      select 1 in (1.0, '2') as col1 from t1;
+    expect:
+      columns: ["col1:bool"]
+      rows:
+        - [true]
