--- a/cases/query/window_with_union_query.yaml
+++ b/cases/query/window_with_union_query.yaml
@@ -188,16 +188,18 @@ cases:
         PROJECT(type=WindowAggregation, limit=10)
           +-WINDOW(partition_keys=(), orders=(ASC), range=(col5, -2, 0))
           +-UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0))
-              SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
-                DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
+              RENAME(name=t1)
+                SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
+                  DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
           DATA_PROVIDER(type=Partition, table=t1, index=index_col25)
     request_plan: |
       LIMIT(limit=10, optimized)
         PROJECT(type=Aggregation, limit=10)
           REQUEST_UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0), index_keys=(col2))
             +-UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0), index_keys=(col2))
-                SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
-                  DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
+                RENAME(name=t1)
+                  SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
+                    DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
             DATA_PROVIDER(request=t1)
             DATA_PROVIDER(type=Partition, table=t1, index=index_col25)
     inputs:
@@ -245,8 +247,9 @@ cases:
         PROJECT(type=WindowAggregation, limit=10)
           +-WINDOW(partition_keys=(), orders=(ASC), range=(col5, -2, 0))
           +-UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0))
-              SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
-                DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
+              RENAME(name=)
+                SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
+                  DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
           SIMPLE_PROJECT(sources=(tx_col0 -> col0, x1 -> col1, x2 -> col2, x3 -> col3, x4 -> col4, x5 -> col5, x6 -> col6))
             DATA_PROVIDER(type=Partition, table=tx, index=index_x25)
     request_plan: |
@@ -254,8 +257,9 @@ cases:
         PROJECT(type=Aggregation, limit=10)
           REQUEST_UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0), index_keys=(col2))
             +-UNION(partition_keys=(), orders=(ASC), range=(col5, -2, 0), index_keys=(col2))
-                SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
-                  DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
+                RENAME(name=)
+                  SIMPLE_PROJECT(sources=(c0 -> col0, c1 -> col1, c2 -> col2, c3 -> col3, 0.000000 -> col4, c5 -> col5, NA_STR -> col6))
+                    DATA_PROVIDER(type=Partition, table=tb, index=index_c25)
             SIMPLE_PROJECT(sources=(tx_col0 -> col0, x1 -> col1, x2 -> col2, x3 -> col3, x4 -> col4, x5 -> col5, x6 -> col6))
               DATA_PROVIDER(request=tx)
             SIMPLE_PROJECT(sources=(tx_col0 -> col0, x1 -> col1, x2 -> col2, x3 -> col3, x4 -> col4, x5 -> col5, x6 -> col6))
