--- a/cases/function/join/test_lastjoin_simple.yaml
+++ b/cases/function/join/test_lastjoin_simple.yaml
@@ -992,3 +992,78 @@ cases:
       rows:
         - ["aa",true,3,1590738989000]
         - ["bb",false,31,1590738992000]
+  - id: 32
+    desc: 异库表拼接1
+    db: db1
+    inputs:
+      - db: db1
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - db: db2
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c3" ]
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select {0}.c1,{0}.c2,db2.{1}.c3,db2.{1}.c4 from {0} last join db2.{1} ORDER BY db2.{1}.c3 on {0}.c1=db2.{1}.c1;
+    expect:
+      order: c1
+      columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+      rows:
+        - [ "aa",2,13,1590738989000 ]
+        - [ "bb",21,131,1590738990000 ]
+        - [ "cc",41,151,1590738992000 ]
+  - id: 33
+    desc: 异库表拼接2
+    db: db1
+    inputs:
+      - db: db1
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - db: db2
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c3" ]
+
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select db1.{0}.c1, db1.{0}.c2,db2.{1}.c3,db2.{1}.c4 from {0} last join db2.{1} ORDER BY db2.{1}.c3 on db1.{0}.c1=db2.{1}.c1;
+    expect:
+      order: c1
+      columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+      rows:
+        - [ "aa",2,13,1590738989000 ]
+        - [ "bb",21,131,1590738990000 ]
+        - [ "cc",41,151,1590738992000 ]
+  - id: 34
+    desc: 异库表拼接3失败
+    db: db1
+    inputs:
+      - db: db1
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - db: db3
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c3" ]
+
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select db1.{0}.c1, db1.{0}.c2,db2.{1}.c3,db2.{1}.c4 from {0} last join db2.{1} ORDER BY db2.{1}.c3 on db1.{0}.c1=db2.{1}.c1;
+    expect:
+      success: false
