--- a/cases/function/join/test_lastjoin_simple.yaml
+++ b/cases/function/join/test_lastjoin_simple.yaml
@@ -1046,7 +1046,7 @@ cases:
         - [ "bb",21,131,1590738990000 ]
         - [ "cc",41,151,1590738992000 ]
   - id: 34
-    desc: 异库表拼接3失败
+    desc: 异库表拼接失败1
     db: db1
     inputs:
       - db: db1
@@ -1065,5 +1065,27 @@ cases:
           - [ "bb",21,131,1590738990000 ]
           - [ "cc",41,151,1590738992000 ]
     sql: select db1.{0}.c1, db1.{0}.c2,db2.{1}.c3,db2.{1}.c4 from {0} last join db2.{1} ORDER BY db2.{1}.c3 on db1.{0}.c1=db2.{1}.c1;
+    expect:
+      success: false
+  - id: 34
+    desc: 异库表拼接失败2
+    db: db1
+    inputs:
+      - db: db1
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c4" ]
+        rows:
+          - [ "aa",2,3,1590738989000 ]
+          - [ "bb",21,31,1590738990000 ]
+          - [ "cc",41,51,1590738991000 ]
+      - db: db2
+        columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
+        indexs: [ "index1:c1:c3" ]
+
+        rows:
+          - [ "aa",2,13,1590738989000 ]
+          - [ "bb",21,131,1590738990000 ]
+          - [ "cc",41,151,1590738992000 ]
+    sql: select db1.{0}.c1, db1.{0}.c2, {1}.c3, {1}.c4 from {0} last join db2.{1} ORDER BY db2.{1}.c3 on db1.{0}.c1=db2.{1}.c1;
     expect:
       success: false
