fix: add link libboost_system

--- a/hybridse/CMakeLists.txt
+++ b/hybridse/CMakeLists.txt
@@ -88,10 +88,10 @@ find_package(Threads)
 
 set(Boost_NO_BOOST_CMAKE ON)
 set(BOOST_ROOT "${CMAKE_PREFIX_PATH}")
-find_package(Boost COMPONENTS filesystem date_time regex REQUIRED)
+find_package(Boost REQUIRED COMPONENTS filesystem date_time regex system)
 if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
     set(OS_LIB ${CMAKE_THREAD_LIBS_INIT} rt)
-    set(COMMON_LIBS boost_date_time boost_filesystem boost_regex leveldb protobuf glog unwind z snappy ssl crypto dl)
+    set(COMMON_LIBS boost_date_time boost_filesystem boost_regex boost_system leveldb protobuf glog unwind z snappy ssl crypto dl)
     set(BRPC_LIBS brpc ${COMMON_LIBS})
 elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
     set(OS_LIB
