feat(planner): convert ASTSingleAssignment to 'set select_mode' cmd

--- a/cases/plan/cmd.yaml
+++ b/cases/plan/cmd.yaml
@@ -322,3 +322,10 @@ cases:
           |    +-window_list: []
           +-options:
             +-delimit: ,
+  - id: set_select_mode
+    sql: SET SELECT_MODE = 'TRINO';
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: set select_mode
+          +-args: [TRINO]
