fix: fix java.yaml bug

--- a/.github/workflows/integration-test-src.yml
+++ b/.github/workflows/integration-test-src.yml
@@ -9,7 +9,7 @@ on:
         default: 'all'
 env:
   GIT_SUBMODULE_STRATEGY: recursive
-  HYBRIDSE_SOURCE: local
+  HYBRIDSE_SOURCE:
 
 jobs:
   java-sdk-test-standalone-0:
