--- a/cases/plan/cmd.yaml
+++ b/cases/plan/cmd.yaml
@@ -326,6 +326,9 @@ cases:
     sql: SET SELECT_MODE = 'TRINO';
     expect:
       node_tree_str: |
-        +-node[CMD]
-          +-cmd_type: set select_mode
-          +-args: [TRINO]
+        +-node[kSetStmt]
+          +-key: SELECT_MODE
+          +-value:
+            +-expr[primary]
+              +-value: TRINO
+              +-type: string
