feat: install hybridse package and sdk locally (#536)

--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -20,19 +20,25 @@ on:
   pull_request:
     branches:
       - main
+env:
+  HYBRIDSE_SOURCE: local
 jobs:
   linux-unit-test:
     name: Run unit tests in Linux
     runs-on: ubuntu-latest
     container:
-      image: maven:3.6-jdk-8
+      image: ghcr.io/4paradigm/hybridsql:0.4.0
     steps:
       - uses: actions/checkout@v2
+      - name: Build and install hybridse-sdk
+        run: |
+          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
       - name: Run unit tests for Linux
         working-directory: java/openmldb-batch
         run: |
           mvn clean compile test
       - name: Run unit tests for all-in-one
+        if: ${{ github.event_name == 'push' }}
         working-directory: java/openmldb-batch
         run: |
           mvn clean compile test -Pallinone
@@ -46,11 +52,15 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
+      - name: Build and install hybridse-sdk
+        run: |
+          bash steps/init_env.sh ${{ env.HYBRIDSE_SOURCE }}
       - name: Run unit tests for MacOS
         working-directory: java/openmldb-batch
         run: |
           mvn clean compile test -Pmacos
       - name: Run unit tests for all-in-one
+        if: ${{ github.event_name == 'push' }}
         working-directory: java/openmldb-batch
         run: |
           mvn clean compile test -Pallinone
