--- a/cases/function/multiple_databases/test_multiple_databases.yaml
+++ b/cases/function/multiple_databases/test_multiple_databases.yaml
@@ -41,7 +41,8 @@ cases:
         - [ "bb",21,131,1590738990000 ]
         - [ "cc",41,151,1590738992000 ]
   - id: 2
-    desc: Last Join tables from two databases 2 - default db is empty, explicit db1 and db2
+    desc: Last Join tables from two databases 2 - default db is db, explicit db1 and db2
+    db: db
     inputs:
       - db: db1
         columns: [ "c1 string","c2 int","c3 bigint","c4 timestamp" ]
