support standalone cli test

--- a/test/integration-test/openmldb-test-java/pom.xml
+++ b/test/integration-test/openmldb-test-java/pom.xml
@@ -63,8 +63,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
-            <scope>provided</scope>
+            <version>1.18.20</version>
+            <optional>true</optional>
         </dependency>
         <!--test-->
         <dependency>
