--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -4,11 +4,15 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<artifactId>openmldb-parent</artifactId>
+		<groupId>com.4paradigm.openmldb</groupId>
+		<version>0.2.3</version>
+	</parent>
 
-        <groupId>com.4paradigm.openmldb</groupId>
 	<artifactId>openmldb-batch</artifactId>
 	<name>openmldb-batch</name>
-        <packaging>jar</packaging>
+	<packaging>jar</packaging>
 	<version>${revision}</version>
 
 	<description>OpenMLDB Batch is the LLVM-based and high-performance batch execution engine for feature engineering.</description>
