--- a/java/openmldb-batchjob/pom.xml
+++ b/java/openmldb-batchjob/pom.xml
@@ -7,7 +7,7 @@
   <parent>
       <artifactId>openmldb-parent</artifactId>
       <groupId>com.4paradigm.openmldb</groupId>
-      <version>0.2.3</version>
+      <version>0.2.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>openmldb-batchjob</artifactId>
