--- a/java/openmldb-nearline-tablet/pom.xml
+++ b/java/openmldb-nearline-tablet/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>openmldb-parent</artifactId>
         <groupId>com.4paradigm.openmldb</groupId>
-        <version>0.2.3</version>
+        <version>0.2.4-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
